# handwriting_detection

./: LICENSE  pyproject.toml  readme.md
doc/: tips.md
docs/: install.md  tips.md
tegaki/: __init__.py  __meta__.py  cli.py  core.py  detect.py  googleapis.py  send.py  util.py
tests/: test_detect.py
wheels/: object_detection-0.1-py3-none-any.whl  readme.md
